--- a/js-numerals/package.json
+++ b/js-numerals/package.json
@@ -4,7 +4,8 @@
   "description": "- Fork this project.\r - Write tests.\r - Don't use external libraries for the conversion.\r - Commit the important milestones and not just the final result.",
   "main": "solution.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "scss": "node-sass --watch . -o css"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "jest": "^26.6.3"
   },
   "dependencies": {
-    "@types/jest": "^26.0.21"
+    "@types/jest": "^26.0.21",
+    "node-sass": "^5.0.0"
   }
 }
